fix #27 - wrap long sequences

--- a/public/css/result.css
+++ b/public/css/result.css
@@ -508,3 +508,7 @@ button#graph-full-screen{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+#proteoform{
+    overflow-wrap: break-word;
+}
